--- a/pom.xml
+++ b/pom.xml
@@ -9,44 +9,49 @@
    <packaging>pom</packaging>
 
    <modules>
-     <module>plexapp-rest-library</module>
-     <module>leftnavbarlibrary</module>
-     <module>serenity-app</module>
-     <module>tests</module>
-     <module>subtitle-converter</module>
-  </modules>
+      <module>plexapp-rest-library</module>
+      <module>leftnavbarlibrary</module>
+      <module>serenity-app</module>
+      <module>tests</module>
+      <module>subtitle-converter</module>
+   </modules>
 
    <repositories>
       <repository>
-        <id>serenity-thirdparty-repo</id>
-        <url>http://kingargyle.github.com/repo</url>
-        <layout>default</layout>
-        <releases>
-           <enabled>true</enabled>
-           <updatePolicy>always</updatePolicy>
-           <checksumPolicy>warn</checksumPolicy>
-        </releases>
+         <id>serenity-thirdparty-repo</id>
+         <url>http://kingargyle.github.com/repo</url>
+         <layout>default</layout>
+         <releases>
+            <enabled>true</enabled>
+            <updatePolicy>always</updatePolicy>
+            <checksumPolicy>warn</checksumPolicy>
+         </releases>
       </repository>
       <repository>
-        <id>cling</id>
-        <url>http://4thline.org/m2/</url>
-        <layout>default</layout>
-        <releases>
-           <enabled>true</enabled>
-           <updatePolicy>always</updatePolicy>
-           <checksumPolicy>warn</checksumPolicy>
-        </releases>
+         <id>android-rome-feed-reader-repository</id>
+         <name>Android ROME Feed Reader Repository</name>
+         <url>https://android-rome-feed-reader.googlecode.com/svn/maven2/releases</url>
+      </repository>
+      <repository>
+         <id>cling</id>
+         <url>http://4thline.org/m2/</url>
+         <layout>default</layout>
+         <releases>
+            <enabled>true</enabled>
+            <updatePolicy>always</updatePolicy>
+            <checksumPolicy>warn</checksumPolicy>
+         </releases>
       </repository>
    </repositories>
 
    <build>
-    <extensions>
-      <extension>
-        <groupId>org.apache.maven.wagon</groupId>
-         <artifactId>wagon-ssh-external</artifactId>
-         <version>1.0-beta-6</version>
-      </extension>
-    </extensions>
+      <extensions>
+         <extension>
+            <groupId>org.apache.maven.wagon</groupId>
+            <artifactId>wagon-ssh-external</artifactId>
+            <version>1.0-beta-6</version>
+         </extension>
+      </extensions>
       <plugins>
          <plugin>
             <groupId>com.atlassian.maven.plugins</groupId>
@@ -58,15 +63,15 @@
                <noDeploy>true</noDeploy>
                <keepBranch>true</keepBranch>
             </configuration>
-        </plugin>
+         </plugin>
       </plugins>
    </build>
 
-    <scm>
-        <connection>scm:git:git@github.com:NineWorlds/serenity-android.git</connection>
-        <developerConnection>scm:git:git@github.com:NineWorlds/serenity-android.git</developerConnection>
-        <url>https://github.com/nineworlds/serenity-android</url>
-        <tag>1.2.2</tag>
-    </scm>
+   <scm>
+      <connection>scm:git:git@github.com:NineWorlds/serenity-android.git</connection>
+      <developerConnection>scm:git:git@github.com:NineWorlds/serenity-android.git</developerConnection>
+      <url>https://github.com/nineworlds/serenity-android</url>
+      <tag>1.2.2</tag>
+   </scm>
 
 </project>
