Issue #61: Adds first pieces for browsing the music library from Plex.
* Add MusicRetrievalIntentService for fetching the artists.
* Add GridView for browsing the available artists in the Grid.
* Add Adapter to handle rendering the images for the artists.
* Add Music Activity.

--- a/serenity-app/AndroidManifest.xml
+++ b/serenity-app/AndroidManifest.xml
@@ -66,6 +66,14 @@
         </activity>
         
         <activity
+            android:name="us.nineworlds.serenity.ui.browser.music.MusicActivity" 
+            android:label="@string/title_activity_tvbrowser_show" 
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+            android:screenOrientation="landscape" >
+        </activity>
+        
+        
+        <activity
             android:name="us.nineworlds.serenity.ui.browser.tv.seasons.TVShowSeasonBrowserActivity" android:label="@string/title_activity_tvbrowser_show_season" 
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
             android:screenOrientation="landscape" >
@@ -108,6 +116,7 @@
             
         <service android:name=".core.services.MainMenuIntentService"/>
         <service android:name=".core.services.MoviesRetrievalIntentService"/>
+        <service android:name=".core.services.MusicRetrievalIntentService"/>
         <service android:name=".core.services.MovieMetaDataRetrievalIntentService"/>
         <service android:name=".core.services.EpisodeRetrievalIntentService"/>
         <service android:name=".core.services.MovieCategoryRetrievalIntentService"/>
