--- a/serenity-app/AndroidManifest.xml
+++ b/serenity-app/AndroidManifest.xml
@@ -72,6 +72,12 @@
             android:screenOrientation="landscape" >
         </activity>
         
+        <activity
+            android:name="us.nineworlds.serenity.ui.browser.music.albums.MusicAlbumsActivity" 
+            android:label="@string/title_activity_tvbrowser_show" 
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+            android:screenOrientation="landscape" >
+        </activity>
         
         <activity
             android:name="us.nineworlds.serenity.ui.browser.tv.seasons.TVShowSeasonBrowserActivity" android:label="@string/title_activity_tvbrowser_show_season" 
@@ -117,6 +123,7 @@
         <service android:name=".core.services.MainMenuIntentService"/>
         <service android:name=".core.services.MoviesRetrievalIntentService"/>
         <service android:name=".core.services.MusicRetrievalIntentService"/>
+        <service android:name=".core.services.MusicAlbumRetrievalIntentService"/>
         <service android:name=".core.services.MovieMetaDataRetrievalIntentService"/>
         <service android:name=".core.services.EpisodeRetrievalIntentService"/>
         <service android:name=".core.services.MovieCategoryRetrievalIntentService"/>
