Issue #61: Add Track listing and navigation for an Album.
The basic scaffolding is now in place for navigating a Plex Music Library.
Still lots of stuff to add support around, but the very basics are in place.

--- a/serenity-app/AndroidManifest.xml
+++ b/serenity-app/AndroidManifest.xml
@@ -80,6 +80,13 @@
         </activity>
         
         <activity
+            android:name="us.nineworlds.serenity.ui.browser.music.tracks.MusicTracksActivity" 
+            android:label="@string/title_activity_tvbrowser_show" 
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+            android:screenOrientation="landscape" >
+        </activity>
+        
+        <activity
             android:name="us.nineworlds.serenity.ui.browser.tv.seasons.TVShowSeasonBrowserActivity" android:label="@string/title_activity_tvbrowser_show_season" 
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
             android:screenOrientation="landscape" >
