--- a/serenity-app/AndroidManifest.xml
+++ b/serenity-app/AndroidManifest.xml
@@ -1,23 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="us.nineworlds.serenity"
-    android:versionCode="18"
+    android:versionCode="20"
     android:versionName="1.3.0" xmlns:tools="http://schemas.android.com/tools">
     
     <!--  try to exclude phone devices from the list. Currently only support Tablets and TVs -->
     <supports-screens android:smallScreens="false"
+        android:normalScreens="false"
         android:largeScreens="true"
         android:xlargeScreens="true"
         />
     
-    <compatible-screens>
+<!--     <compatible-screens>
         <screen android:screenSize="normal" android:screenDensity="xhdpi"/>
+        <screen android:screenSize="normal" android:screenDensity="hdpi"/>
         <screen android:screenSize="large"  android:screenDensity="hdpi"/>
+        <screen android:screenSize="large"  android:screenDensity="mdpi"/>
         <screen android:screenSize="large"  android:screenDensity="xhdpi"/>
         <screen android:screenSize="xlarge" android:screenDensity="hdpi"/>
+        <screen android:screenSize="xlarge" android:screenDensity="mdpi"/>
         <screen android:screenSize="xlarge" android:screenDensity="xhdpi"/>
     </compatible-screens>
-    
+-->    
 
     <uses-sdk
         android:minSdkVersion="12"
@@ -33,6 +37,7 @@
     <uses-feature
         android:name="android.hardware.touchscreen"
         android:required="false" />
+
 
     <application
         android:name="us.nineworlds.serenity.SerenityApplication"
