--- a/serenity-app/AndroidManifest.xml
+++ b/serenity-app/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="us.nineworlds.serenity"
-    android:versionCode="21"
-    android:versionName="1.3.1" xmlns:tools="http://schemas.android.com/tools">
+    android:versionCode="22"
+    android:versionName="1.4.0-dev" xmlns:tools="http://schemas.android.com/tools">
     
     <!--  try to exclude phone devices from the list. Currently only support Tablets and TVs -->
     <supports-screens android:smallScreens="false"
@@ -11,18 +11,6 @@
         android:xlargeScreens="true"
         />
     
-<!--     <compatible-screens>
-        <screen android:screenSize="normal" android:screenDensity="xhdpi"/>
-        <screen android:screenSize="normal" android:screenDensity="hdpi"/>
-        <screen android:screenSize="large"  android:screenDensity="hdpi"/>
-        <screen android:screenSize="large"  android:screenDensity="mdpi"/>
-        <screen android:screenSize="large"  android:screenDensity="xhdpi"/>
-        <screen android:screenSize="xlarge" android:screenDensity="hdpi"/>
-        <screen android:screenSize="xlarge" android:screenDensity="mdpi"/>
-        <screen android:screenSize="xlarge" android:screenDensity="xhdpi"/>
-    </compatible-screens>
--->    
-
     <uses-sdk
         android:minSdkVersion="12"
         android:targetSdkVersion="13" />
