--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -4,12 +4,12 @@
    <parent>
       <groupId>us.nineworlds.serenity</groupId>
       <artifactId>serenity-parent</artifactId>
-      <version>1.3.2</version>
+      <version>1.3.3-SNAPSHOT</version>
 
    </parent>
 
    <artifactId>plexapp-tests-parent</artifactId>
-   <version>1.3.2</version>
+   <version>1.3.3-SNAPSHOT</version>
    <packaging>pom</packaging>
 
    <modules>
