--- a/serenity-app/pom.xml
+++ b/serenity-app/pom.xml
@@ -4,7 +4,7 @@
    <parent>
       <groupId>us.nineworlds.serenity</groupId>
       <artifactId>serenity-parent</artifactId>
-      <version>1.3.5</version>
+      <version>1.3.6-SNAPSHOT</version>
    </parent>
 
    <artifactId>serenity-app</artifactId>
@@ -33,14 +33,19 @@
          <version>1.3</version>
       </dependency>
       <dependency>
+           <groupId>android.support</groupId>
+           <artifactId>compatibility-v4</artifactId>
+           <version>11</version>          
+      </dependency>      
+      <dependency>
          <groupId>us.nineworlds.serenity</groupId>
          <artifactId>subtitle-converter</artifactId>
-         <version>1.3.5</version>
+         <version>1.3.6-SNAPSHOT</version>
       </dependency>
       <dependency>
          <groupId>us.nineworlds.serenity</groupId>
          <artifactId>plexapp-rest-library</artifactId>
-         <version>1.3.5</version>
+         <version>1.3.6-SNAPSHOT</version>
       </dependency>
    </dependencies>
 
