--- a/serenity-app/pom.xml
+++ b/serenity-app/pom.xml
@@ -4,7 +4,7 @@
    <parent>
       <groupId>us.nineworlds.serenity</groupId>
       <artifactId>serenity-parent</artifactId>
-      <version>1.3.7-SNAPSHOT</version>
+      <version>1.3.7</version>
    </parent>
 
    <artifactId>serenity-app</artifactId>
@@ -40,12 +40,12 @@
       <dependency>
          <groupId>us.nineworlds.serenity</groupId>
          <artifactId>subtitle-converter</artifactId>
-         <version>1.3.7-SNAPSHOT</version>
+         <version>1.3.7</version>
       </dependency>
       <dependency>
          <groupId>us.nineworlds.serenity</groupId>
          <artifactId>plexapp-rest-library</artifactId>
-         <version>1.3.7-SNAPSHOT</version>
+         <version>1.3.7</version>
       </dependency>
    </dependencies>
 
