--- a/serenity-app/project.properties
+++ b/serenity-app/project.properties
@@ -12,3 +12,4 @@ proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.
 
 # Project target.
 target=android-13
+android.library.reference.1=../../android-menudrawer/menudrawer
