--- a/tests/serenity-app-tests/pom.xml
+++ b/tests/serenity-app-tests/pom.xml
@@ -133,7 +133,7 @@
             <dependency>
                <groupId>us.nineworlds.serenity</groupId>
                <artifactId>serenity-app</artifactId>
-               <version>1.2.3</version>
+               <version>1.4.0-SNAPSHOT</version>
                <type>jar</type>
                <scope>provided</scope>
             </dependency>
