--- a/serenity-app/pom.xml
+++ b/serenity-app/pom.xml
@@ -14,7 +14,7 @@
       <dependency>
          <groupId>android</groupId>
          <artifactId>android</artifactId>
-         <version>3.2_r1</version>
+         <version>4.2.2_r2</version>
          <scope>provided</scope>
       </dependency>
       <dependency>
@@ -36,7 +36,7 @@
            <groupId>android.support</groupId>
            <artifactId>compatibility-v4</artifactId>
            <version>18</version>          
-      </dependency>      
+      </dependency>            
       <dependency>
          <groupId>us.nineworlds.serenity</groupId>
          <artifactId>subtitle-converter</artifactId>
@@ -51,6 +51,7 @@
          <groupId>net.simonvt.menudrawer</groupId>
          <artifactId>menudrawer</artifactId>
          <version>3.0.5-SNAPSHOT</version>
+         <type>apklib</type>
       </dependency>
       
    </dependencies>
