--- a/tests/serenity-app-tests/pom.xml
+++ b/tests/serenity-app-tests/pom.xml
@@ -53,9 +53,9 @@
          <scope>test</scope>
       </dependency>
       <dependency>
-         <groupId>com.pivotallabs</groupId>
+         <groupId>org.robolectric</groupId>
          <artifactId>robolectric</artifactId>
-         <version>1.2</version>
+         <version>2.2-SNAPSHOT</version>
          <scope>test</scope>
       </dependency>
 
@@ -72,7 +72,7 @@
          </plugins>
       </pluginManagement>
       <plugins>
-         <plugin>
+<!--          <plugin>
             <groupId>org.jacoco</groupId>
             <artifactId>jacoco-maven-plugin</artifactId>
             <version>0.6.2.201302030002</version>
@@ -91,6 +91,7 @@
                </execution>
             </executions>
          </plugin>
+-->         
          <plugin>
             <groupId>com.jayway.maven.plugins.android.generation2</groupId>
             <artifactId>android-maven-plugin</artifactId>
