--- a/tests/serenity-app-tests/pom.xml
+++ b/tests/serenity-app-tests/pom.xml
@@ -72,7 +72,7 @@
          </plugins>
       </pluginManagement>
       <plugins>
-<!--          <plugin>
+          <plugin>
             <groupId>org.jacoco</groupId>
             <artifactId>jacoco-maven-plugin</artifactId>
             <version>0.6.2.201302030002</version>
@@ -90,8 +90,12 @@
                   </goals>
                </execution>
             </executions>
-         </plugin>
--->         
+            <configuration>
+                <includes>
+                    <include>us/nineworlds/serenity/*</include>
+                </includes>
+            </configuration>
+         </plugin>         
          <plugin>
             <groupId>com.jayway.maven.plugins.android.generation2</groupId>
             <artifactId>android-maven-plugin</artifactId>
