--- a/serenity-app/pom.xml
+++ b/serenity-app/pom.xml
@@ -48,9 +48,9 @@
          <version>1.4.0-SNAPSHOT</version>
       </dependency>
       <dependency>
-         <groupId>net.simonvt.menudrawer</groupId>
+         <groupId>us.nineworlds.serenity</groupId>
          <artifactId>menudrawer</artifactId>
-         <version>3.0.5-SNAPSHOT</version>
+         <version>1.4.0-SNAPSHOT</version>
          <type>apklib</type>
       </dependency>
       
