Add updated icons for us tv ratings information.

--- a/serenity-app/project.properties
+++ b/serenity-app/project.properties
@@ -12,4 +12,4 @@ proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.
 
 # Project target.
 target=android-17
-android.library.reference.1=../../android-menudrawer/menudrawer
+android.library.reference.1=../android-menudrawer/menudrawer
