--- a/tests/serenity-app-tests/project.properties
+++ b/tests/serenity-app-tests/project.properties
@@ -13,4 +13,4 @@
 # Project target.
 target=android-13
 android.library=true
-android.library.reference.1=../../../android-menudrawer/menudrawer
+android.library.reference.1=../../android-menudrawer/menudrawer
