--- a/serenity-app/proguard.cfg
+++ b/serenity-app/proguard.cfg
@@ -2,6 +2,7 @@
 -dontusemixedcaseclassnames
 -dontskipnonpubliclibraryclasses
 -dontpreverify
+-dontwarn android.support.v4.**
 -verbose
 -optimizations !code/simplification/arithmetic,!field/*,!class/merging/*
 
@@ -13,6 +14,7 @@
 -keep public class * extends android.app.backup.BackupAgentHelper
 -keep public class * extends android.preference.Preference
 -keep public class com.android.vending.licensing.ILicensingService
+-keep public class android.support.v4.media
 
 -keepclasseswithmembernames class * {
     native <methods>;
