--- a/tests/serenity-app-tests/pom.xml
+++ b/tests/serenity-app-tests/pom.xml
@@ -115,6 +115,7 @@
              <artifactId>maven-surefire-plugin</artifactId>
              <version>2.13</version>
              <configuration>
+                <skip>true</skip>
                 <workingDirectory>../../serenity-app</workingDirectory>
              </configuration>
           </plugin>
