--- a/tests/serenity-app-tests/pom.xml
+++ b/tests/serenity-app-tests/pom.xml
@@ -53,9 +53,9 @@
          <scope>test</scope>
       </dependency>
       <dependency>
-         <groupId>com.pivotallabs</groupId>
+         <groupId>org.robolectric</groupId>
          <artifactId>robolectric</artifactId>
-         <version>1.2</version>
+         <version>2.2-SNAPSHOT</version>
          <scope>test</scope>
       </dependency>
 
@@ -133,7 +133,7 @@
             <dependency>
                <groupId>us.nineworlds.serenity</groupId>
                <artifactId>serenity-app</artifactId>
-               <version>1.2.3</version>
+               <version>1.4.0-SNAPSHOT</version>
                <type>jar</type>
                <scope>provided</scope>
             </dependency>
