--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,15 @@
    </repositories>
 
    <build>
+      <pluginManagement>
+         <plugins>
+            <plugin>
+               <groupId>com.jayway.maven.plugins.android.generation2</groupId>
+               <artifactId>android-maven-plugin</artifactId>
+               <version>3.6.1</version>
+            </plugin>
+         </plugins>
+      </pluginManagement>
       <extensions>
          <extension>
             <groupId>org.apache.maven.wagon</groupId>
