Re-Enable robolectric tests

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,10 @@
       <module>subtitle-converter</module>
    </modules>
 
+   <properties>
+      <pom.root>${basedir}</pom.root>
+   </properties>
+
    <repositories>
       <repository>
          <id>serenity-thirdparty-repo</id>
