--- a/subtitle-converter/pom.xml
+++ b/subtitle-converter/pom.xml
@@ -4,11 +4,11 @@
   <parent>
     <groupId>us.nineworlds.serenity</groupId>
     <artifactId>serenity-parent</artifactId>
-    <version>1.5.5</version>
+    <version>1.6.0-SNAPSHOT</version>
   </parent>
   <groupId>us.nineworlds.serenity</groupId>
   <artifactId>subtitle-converter</artifactId>
-  <version>1.5.5</version>
+  <version>1.6.0-SNAPSHOT</version>
   <name>subtitle-converter</name>
   <dependencies>
     <dependency>
