Set default character encoding to UTF-8.

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 
    <properties>
       <pom.root>${basedir}</pom.root>
+      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
 
    <repositories>
