--- a/tests/serenity-app-tests/pom.xml
+++ b/tests/serenity-app-tests/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <name>Serenity App Tests</name>
    <parent>
       <groupId>us.nineworlds.serenity</groupId>
       <artifactId>plexapp-tests-parent</artifactId>
-      <version>1.6.0-SNAPSHOT</version>
+      <version>1.6.0</version>
    </parent>
 
    <artifactId>serenity-app-tests</artifactId>
@@ -16,7 +16,7 @@
       <dependency>
          <groupId>android</groupId>
          <artifactId>android</artifactId>
-<!--         <version>3.2_r1</version> -->
+         <!-- <version>3.2_r1</version> -->
          <version>4.1.2_r4</version>
 
          <scope>provided</scope>
@@ -24,20 +24,20 @@
       <dependency>
          <groupId>us.nineworlds.serenity</groupId>
          <artifactId>serenity-app</artifactId>
-         <version>1.6.0-SNAPSHOT</version>
+         <version>1.6.0</version>
          <type>apk</type>
       </dependency>
       <dependency>
          <groupId>us.nineworlds.serenity</groupId>
          <artifactId>plexapp-rest-library</artifactId>
-         <version>1.6.0-SNAPSHOT</version>
+         <version>1.6.0</version>
          <type>jar</type>
       </dependency>
-      
+
       <dependency>
          <groupId>us.nineworlds.serenity</groupId>
          <artifactId>serenity-app</artifactId>
-         <version>1.6.0-SNAPSHOT</version>
+         <version>1.6.0</version>
          <type>jar</type>
          <scope>compile</scope>
       </dependency>
@@ -64,6 +64,41 @@
    <build>
       <plugins>
          <plugin>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <version>0.6.4.201312101107</version>
+            <executions>
+               <!-- Prepares the property pointing to the JaCoCo runtime agent which is passed as VM argument when Maven 
+                  the Surefire plugin is executed. -->
+               <execution>
+                  <id>pre-unit-test</id>
+                  <goals>
+                     <goal>prepare-agent</goal>
+                  </goals>
+                  <configuration>
+                     <!-- Sets the path to the file which contains the execution data. -->
+                     <destFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</destFile>
+                     <!-- Sets the name of the property containing the settings for JaCoCo runtime agent. -->
+                     <propertyName>surefireArgLine</propertyName>
+                  </configuration>
+               </execution>
+               <!-- Ensures that the code coverage report for unit tests is created after unit tests have been run. -->
+               <execution>
+                  <id>post-unit-test</id>
+                  <phase>test</phase>
+                  <goals>
+                     <goal>report</goal>
+                  </goals>
+                  <configuration>
+                     <!-- Sets the path to the file which contains the execution data. -->
+                     <dataFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</dataFile>
+                     <!-- Sets the output directory for the code coverage report. -->
+                     <outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
+                  </configuration>
+               </execution>
+            </executions>
+         </plugin>
+         <plugin>
             <groupId>com.jayway.maven.plugins.android.generation2</groupId>
             <artifactId>android-maven-plugin</artifactId>
             <configuration>
@@ -83,18 +118,18 @@
             </configuration>
          </plugin>
          <plugin>
-             <artifactId>maven-surefire-plugin</artifactId>
-             <version>2.13</version>
-             <configuration>
-                <skip>false</skip>
-                <workingDirectory>../../serenity-app</workingDirectory>
-                <systemPropertyVariables>
-                   <android.manifest>${env.PWD}/serenity-app/AndroidManifest.xml</android.manifest>
-                   <android.resources>${env.PWD}/serenity-app/res</android.resources>
-                   <android.assets>${env.PWD}/serenity-app/res</android.assets>
-                   </systemPropertyVariables>
-             </configuration>
-          </plugin>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.13</version>
+            <configuration>
+               <skip>false</skip>
+               <workingDirectory>../../serenity-app</workingDirectory>
+               <systemPropertyVariables>
+                  <android.manifest>${env.PWD}/serenity-app/AndroidManifest.xml</android.manifest>
+                  <android.resources>${env.PWD}/serenity-app/res</android.resources>
+                  <android.assets>${env.PWD}/serenity-app/res</android.assets>
+               </systemPropertyVariables>
+            </configuration>
+         </plugin>
       </plugins>
    </build>
    <profiles>
@@ -104,14 +139,14 @@
             <dependency>
                <groupId>android</groupId>
                <artifactId>android</artifactId>
-<!--          <version>3.2_r1</version> -->
-              <version>4.1.2_r4</version>
-              <scope>compile</scope>
+               <!-- <version>3.2_r1</version> -->
+               <version>4.1.2_r4</version>
+               <scope>compile</scope>
             </dependency>
             <dependency>
                <groupId>us.nineworlds.serenity</groupId>
                <artifactId>serenity-app</artifactId>
-               <version>1.6.0-SNAPSHOT</version>
+               <version>1.6.0</version>
                <type>jar</type>
                <scope>provided</scope>
             </dependency>
